fixed avatar icon stretch on safari ios

--- a/css/avatar-translation.css
+++ b/css/avatar-translation.css
@@ -19,7 +19,7 @@
 
 .avatar-progress-icon {
   height: 7vh;
-  width: min-content;
+  width: auto;
   filter: grayscale(100%); /* Default to grey */
 
   transition-duration: 0.4s;
